Fix the aligment to the center of the footer on small devices

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -85,8 +85,15 @@ footer {
   }
 }
 
-@media (max-width: 960px) and (orientation: landscape) {
-  footer .menu-wrapper {
-    text-align: center;
+@media (max-width: 960px) {
+  footer {
+    .menu-wrapper {
+      text-align: center;
+      display: block;
+    }
+    img {
+      text-align: center;
+      width: 100%;
+    }
   }
 }
